# learning-software-testing

./: .env.example  .gitignore  Dockerfile  FAQ.md  README.md  docker-compose.yaml  pyproject.toml  tasks.md
.github/workflows/: ci.yml
alembic/: env.py
scripts/: run_coverage.sh  setup_test_db.py
tests/: conftest.py  test_create_direct.py  test_metadata.py
tests/api/: test_concurrency.py  test_events.py  test_orders.py  test_users.py
tests/integration/: test_event_repository.py  test_order_repository.py  test_seat_repository.py  test_user_repository.py
tests/unit/: test_auth_service.py  test_event_service.py  test_price_calculation.py  test_seat_allocator.py
ticketer/: __init__.py  main.py
ticketer/api/v1/: deps.py
ticketer/background/: __init__.py  tasks.py
ticketer/core/: config.py
ticketer/db/: session.py
ticketer/models/: __init__.py  order.py
ticketer/repositories/: __init__.py  event_repository.py  order_repository.py  seat_repository.py  user_repository.py  venue_repository.py
ticketer/schemas/: __init__.py  event.py  order.py  seat.py  user.py
ticketer/services/: auth_service.py  event_service.py  order_service.py
